# Leader_Election_Problem

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cmk.sh  input.txt
include/: My_Node.h  message.h  my_node.h  node.h
src/: My_Node.cpp  input.txt  main.cpp  message.cpp  my_node.cpp  node.cpp
